--- a/src/AioCore.Domain/AioCore.Domain.csproj
+++ b/src/AioCore.Domain/AioCore.Domain.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\AioCore.Shared\AioCore.Shared.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
