--- a/.github/workflows/aiocore-api.yml
+++ b/.github/workflows/aiocore-api.yml
@@ -1,6 +1,7 @@
 name: aiocore-api
 
 on:
+  workflow_dispatch:
   push:
     branches:
     - dev
@@ -8,7 +9,7 @@ on:
     paths:
     - src/**
     - .github/workflows/aiocore-api.yml
-
+  
   pull_request:
     branches:
     - dev
@@ -16,22 +17,35 @@ on:
     paths:
     - src/**
     - .github/workflows/aiocore-api.yml
-
 env:
   SERVICE: aiocore-api
   IMAGE: aiocore.api
+  DOTNET_VERSION: 6.0.x
 
 jobs:
-  BuildContainerForPR_Linux:
+
+  BuildContainersForPR_Linux:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'pull_request' }}
     steps:
     - name: 'Checkout Github Action'
       uses: actions/checkout@master
     
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.DOTNET_VERSION }}
+
+    - name: Build and run unit tests
+      run: |
+        cd src
+        dotnet restore "eShopOnContainers-ServicesAndWebApps.sln"
+        cd AioCore.API
+        dotnet build --no-restore
+      
     - name: Compose build ${{ env.SERVICE }}
       run: sudo -E docker-compose build ${{ env.SERVICE }}
-      working-directory: .
+      working-directory: ./src
       shell: bash
       env:
         TAG: ${{ env.BRANCH }}
@@ -43,6 +57,18 @@ jobs:
     steps:
     - name: 'Checkout Github Action'
       uses: actions/checkout@master
+  
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.DOTNET_VERSION }}
+
+    - name: Build and run unit tests
+      run: |
+        cd src
+        dotnet restore "eShopOnContainers-ServicesAndWebApps.sln"
+        cd aiocore.API
+        dotnet build --no-restore
 
     - name: Enable experimental features for the Docker daemon and CLI
       run: |
@@ -52,6 +78,7 @@ jobs:
           sudo service docker restart
           docker version -f '{{.Client.Experimental}}'
           docker version -f '{{.Server.Experimental}}'
+
     - name: Login to Container Registry
       uses: docker/login-action@v1
       with:
@@ -68,7 +95,7 @@ jobs:
 
     - name: Compose build ${{ env.SERVICE }}
       run: sudo -E docker-compose build ${{ env.SERVICE }}
-      working-directory: .
+      working-directory: ./src
       shell: bash
       env:
         TAG: ${{ env.BRANCH }}
@@ -76,7 +103,7 @@ jobs:
 
     - name: Compose push ${{ env.SERVICE }}
       run: sudo -E docker-compose push ${{ env.SERVICE }}
-      working-directory: .
+      working-directory: ./src
       shell: bash
       env:
         TAG: ${{ env.BRANCH }}
