--- a/.github/workflows/aiocore-api.yml
+++ b/.github/workflows/aiocore-api.yml
@@ -38,8 +38,8 @@ jobs:
 
     - name: Build and run unit tests
       run: |
+        dotnet restore "AioCore.Backend.sln"
         cd src
-        dotnet restore "eShopOnContainers-ServicesAndWebApps.sln"
         cd AioCore.API
         dotnet build --no-restore
       
