--- a/.github/workflows/aiocore-api.yml
+++ b/.github/workflows/aiocore-api.yml
@@ -65,9 +65,9 @@ jobs:
 
     - name: Build and run unit tests
       run: |
+        dotnet restore "AioCore.Backend.sln"
         cd src
-        dotnet restore "eShopOnContainers-ServicesAndWebApps.sln"
-        cd aiocore.API
+        cd AioCore.API
         dotnet build --no-restore
 
     - name: Enable experimental features for the Docker daemon and CLI
