--- a/src/AioCore.API/appsettings.json
+++ b/src/AioCore.API/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Host=localhost;Port=5432;User ID=postgres;Password=Pass@word;Database=aiocore;Pooling=true;",
+  "EventBus": {
+    "AzureServiceBusEnabled": false,
+    "Connection": "localhost",
+    "SubscriptionClientName": "aiocore",
+    "UserName": "guest",
+    "Password": "guest",
+    "RetryCount": 5
+  }
 }
