--- a/.github/workflows/aiocore.api.yml
+++ b/.github/workflows/aiocore.api.yml
@@ -49,7 +49,7 @@ jobs:
       shell: bash
       env:
         TAG: ${{ env.BRANCH }}
-        REGISTRY: ${{ secrets.REGISTRY }}
+        REGISTRY: ${{ secrets.REGISTRY_ENDPOINT }}
 
   BuildLinux:
     runs-on: ubuntu-latest
@@ -79,12 +79,12 @@ jobs:
           docker version -f '{{.Client.Experimental}}'
           docker version -f '{{.Server.Experimental}}'
 
-    - name: Login to GitHub Packages Docker Registry
+    - name: Login to Container Registry
       uses: docker/login-action@v1
       with:
-        registry: ${{ secrets.REGISTRY }}
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.TOKEN }}
+        registry: ${{ secrets.REGISTRY_HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
 
     - name: Set branch name as env variable
       run: |
@@ -99,7 +99,7 @@ jobs:
       shell: bash
       env:
         TAG: ${{ env.BRANCH }}
-        REGISTRY: ${{ secrets.REGISTRY }}
+        REGISTRY: ${{ secrets.REGISTRY_ENDPOINT }}
 
     - name: Compose push ${{ env.SERVICE }}
       run: sudo -E docker-compose push ${{ env.SERVICE }}
@@ -107,10 +107,10 @@ jobs:
       shell: bash
       env:
         TAG: ${{ env.BRANCH }}
-        REGISTRY: ${{ secrets.REGISTRY }}
+        REGISTRY: ${{ secrets.REGISTRY_ENDPOINT }}
 
     - name: Create multiarch manifest
       run: |
-        docker --config ~/.docker manifest create ${{ secrets.REGISTRY  }}/${{ env.IMAGE  }}:${{ env.BRANCH  }} ${{ secrets.REGISTRY  }}/${{ env.IMAGE  }}:linux-${{ env.BRANCH  }}
-        docker --config ~/.docker manifest push ${{ secrets.REGISTRY  }}/${{ env.IMAGE  }}:${{ env.BRANCH  }}
+        docker --config ~/.docker manifest create ${{ secrets.REGISTRY_ENDPOINT  }}/${{ env.IMAGE  }}:${{ env.BRANCH  }} ${{ secrets.REGISTRY_ENDPOINT  }}/${{ env.IMAGE  }}:linux-${{ env.BRANCH  }}
+        docker --config ~/.docker manifest push ${{ secrets.REGISTRY_ENDPOINT  }}/${{ env.IMAGE  }}:${{ env.BRANCH  }}
       shell: bash
