Done for config swagger and demo api for tenant

--- a/src/AioCore.Application/AioCore.Application.csproj
+++ b/src/AioCore.Application/AioCore.Application.csproj
@@ -7,6 +7,10 @@
     <ProjectReference Include="..\AioCore.Domain\AioCore.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Validations\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
