--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,42 @@
-name: CI
-
+name: Docker
 on:
   push:
     branches: [ dev ]
-  pull_request:
-    branches: [ dev ]
-
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Github Action
-        uses: actions/checkout@master
-          
-      - name: Build docker image
-        run: |
-          sudo -E docker-compose build aiocore.backend .
-        shell: bash
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - name: Login to Container Registry
+      - name: Login Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          
-      - name: Docker push image
-        run: |
-          sudo docker push aiocore/aiocore.backend:latest
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        id: buildx
+
+      - name: Cache Docker Image Layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v2
+        id: docker_build
+        with:
+          context: ./src/AioCore.API/
+          file: ./src/AioCore.API/Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: aiocore/aiocore-backend
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+
+      - name: Verify
+        run: echo ${{ steps.docker_build.outputs.digest }}
