--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,81 @@
-name: Docker
+name: aiocore-backend
+
 on:
+  workflow_dispatch:
   push:
-    branches: [ dev ]
+    branches:
+    - dev
+
+    paths:
+    - src/**
+    - .github/workflows/main.yml
+  
+  pull_request:
+    branches:
+    - dev
+
+    paths:
+    - src/**
+    - .github/workflows/main.yml
+env:
+  SERVICE: aiocore-backend
+  IMAGE: aiocore-backend
+  DOTNET_VERSION: 6.0.100-preview.3.21202.5
+
 jobs:
-  docker:
+
+  build:
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request' }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    - name: 'Checkout Github Action'
+      uses: actions/checkout@master
+  
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: Login Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    - name: Build and run unit tests
+      run: |
+        dotnet restore "AioCore.Backend.sln"
+        cd src/AioCore.API/AioCore.API
+        dotnet build --no-restore
 
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        id: buildx
+    - name: Enable experimental features for the Docker daemon and CLI
+      run: |
+          echo $'{\n  "experimental": true\n}' | sudo tee /etc/docker/daemon.json
+          mkdir -p ~/.docker
+          echo $'{\n  "experimental": "enabled"\n}' | sudo tee ~/.docker/config.json
+          sudo service docker restart
+          docker version -f '{{.Client.Experimental}}'
+          docker version -f '{{.Server.Experimental}}'
 
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v2
-        id: docker_build
-        with:
-          context: ./src/AioCore.API/
-          file: ./src/AioCore.API/Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          push: true
-          tags: aiocore/aiocore-backend
+    - name: Login Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Verify
-        run: echo ${{ steps.docker_build.outputs.digest }}
+    - name: Set branch name as env variable
+      run: |
+        currentbranch=$(echo ${GITHUB_REF##*/})
+        echo "running on $currentbranch"
+        echo "BRANCH=$currentbranch" >> $GITHUB_ENV
+      shell: bash
+
+    - name: Compose build aiocore-backend
+      run: sudo -E docker-compose build aiocore-backend
+      working-directory: .
+      shell: bash
+
+    - name: Compose push aiocore-backend
+      run: sudo -E docker-compose push aiocore-backend
+      working-directory: .
+      shell: bash
+
+    - name: Create multiarch manifest
+      run: |
+        docker --config ~/.docker manifest create ${{ secrets.REGISTRY_ENDPOINT  }}/${{ env.IMAGE  }}:${{ env.BRANCH  }} ${{ secrets.REGISTRY_ENDPOINT  }}/${{ env.IMAGE  }}:linux-${{ env.BRANCH  }}
+        docker --config ~/.docker manifest push ${{ secrets.REGISTRY_ENDPOINT  }}/${{ env.IMAGE  }}:${{ env.BRANCH  }}
+      shell: bash
