--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Docker - Github Package
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
       uses: docker/build-push-action@v1
       with:
         username: ${{ github.actor }}
-        password: ${{ secrets.ACCESS_TOKEN }}
+        password: ${{ secrets.GITHUB_TOKEN }}
         dockerfile: src/AioCore.API/Dockerfile
         registry: docker.pkg.github.com
         repository: aiocore/aiocore.backend/aiocore-backend
