update security entities and dockerfile for elasticsearch and redis

--- a/src/AioCore.Shared/AioCore.Shared.csproj
+++ b/src/AioCore.Shared/AioCore.Shared.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AioCore.Packages\Package.Elasticsearch\Package.Elasticsearch.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.EventBus\Package.EventBus.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.Mongo\Package.Mongo.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.NestedSet\Package.NestedSet.csproj" />
