--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,52 @@
 version: '3.4'
 
 services:
+  elasticsearch:
+    build:
+      context: src/AioCore.API/Dockers/Elasticsearch/
+    volumes:
+      - ./src/AioCore.API/Dockers/Elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    environment:
+      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
+
+  sqldata:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: Pass@word
+    ports:
+      - 5435:5432
+    volumes:
+      - sqldata:/var/lib/postgresql/data
+    command: postgres -N 500
+
+  redis:
+    image: redis:alpine
+    volumes:
+      - ./src/AioCore.API/Dockers/Redis/redis.conf:/usr/local/etc/redis/redis.conf
+    ports:
+    - 6379:6379
+
+  rabbitmq:
+    image: rabbitmq:alpine
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+
   aiocore-backend:
     image: aiocore/aiocore-backend:latest
     build:
       context: .
       dockerfile: src/AioCore.API/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "5000:80"
+    depends_on:
+    - sqldata
+
+volumes:
+  sqldata:
+    external: true
