--- a/src/AioCore.Domain/AioCore.Domain.csproj
+++ b/src/AioCore.Domain/AioCore.Domain.csproj
@@ -1,6 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <Compile Remove="AggregatesModel\NewFolder\**" />
+    <EmbeddedResource Remove="AggregatesModel\NewFolder\**" />
+    <None Remove="AggregatesModel\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AioCore.Shared\AioCore.Shared.csproj" />
   </ItemGroup>
 
