update dockerfile of elasticsearch

--- a/src/AioCore.API/appsettings.json
+++ b/src/AioCore.API/appsettings.json
@@ -15,5 +15,11 @@
     "UserName": "guest",
     "Password": "guest",
     "RetryCount": 5
+  },
+  "Elasticsearch": {
+    "Url": "",
+    "Index": "aioc",
+    "UserName": "",
+    "Password": ""
   }
 }
