--- a/src/AioCore.API/appsettings.json
+++ b/src/AioCore.API/appsettings.json
@@ -17,7 +17,7 @@
     "RetryCount": 5
   },
   "Elasticsearch": {
-    "Url": "",
+    "Url": "http://localhost:9200",
     "Index": "aioc",
     "UserName": "",
     "Password": ""
