--- a/src/AioCore.Packages/Package.Elasticsearch/Package.Elasticsearch.csproj
+++ b/src/AioCore.Packages/Package.Elasticsearch/Package.Elasticsearch.csproj
@@ -11,4 +11,8 @@
   <ItemGroup>
     <PackageReference Include="NEST" Version="7.12.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Package.Extensions\Package.Extensions.csproj" />
+  </ItemGroup>
 </Project>
