done for create dynamic binary and upload file and resize image

--- a/src/AioCore.API/appsettings.json
+++ b/src/AioCore.API/appsettings.json
@@ -21,5 +21,11 @@
     "Index": "aioc",
     "UserName": "",
     "Password": ""
-  }
+  },
+  "Minio": {
+    "Endpoint": "localhost:9000",
+    "AccessKey": "aioc-access",
+    "SecretKey": "aioc-secret",
+    "Bucket": "aioc"
+  } 
 }
