--- a/src/AioCore.Application/AioCore.Application.csproj
+++ b/src/AioCore.Application/AioCore.Application.csproj
@@ -11,6 +11,10 @@
     <Folder Include="Validations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SkiaSharp" Version="2.80.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
