--- a/src/AioCore.API/AioCore.API.csproj
+++ b/src/AioCore.API/AioCore.API.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.5">
       <PrivateAssets>all</PrivateAssets>
@@ -12,9 +16,8 @@
     <ProjectReference Include="..\AioCore.Application\AioCore.Application.csproj" />
   </ItemGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..</DockerfileContext>
-  </PropertyGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Localization.en-US.resx" />
+    <EmbeddedResource Update="Resources\Localization.vi-VN.resx" />
+  </ItemGroup>
 </Project>
