Done for config multiple language

--- a/src/AioCore.Shared/AioCore.Shared.csproj
+++ b/src/AioCore.Shared/AioCore.Shared.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\AioCore.Packages\Package.Elasticsearch\Package.Elasticsearch.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.EventBus\Package.EventBus.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.FileServer\Package.FileServer.csproj" />
+    <ProjectReference Include="..\AioCore.Packages\Package.Localization\Package.Localization.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.Mongo\Package.Mongo.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.NestedSet\Package.NestedSet.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.Redis\Package.Redis.csproj" />
