--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,22 @@ jobs:
     - name: Check out the repo
       uses: actions/checkout@v2
     
-    - name: Push to GitHub Packages
+    - name: Push AioCore.API to GitHub Packages
       uses: docker/build-push-action@v1
       with:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         dockerfile: src/AioCore.API/Dockerfile
         registry: docker.pkg.github.com
-        repository: aiocore/aiocore.backend/aiocore-backend
+        repository: aiocore/aiocore.backend/aiocore-api
+        tag_with_ref: true
+
+    - name: Push AioCore.BackgroundTasks to GitHub Packages
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+        dockerfile: src/AioCore.BackgroundTasks/Dockerfile
+        registry: docker.pkg.github.com
+        repository: aiocore/aiocore.backend/aiocore-backgroundtasks
         tag_with_ref: true
