update sing-in command

--- a/src/AioCore.API/Properties/launchSettings.json
+++ b/src/AioCore.API/Properties/launchSettings.json
@@ -2,6 +2,8 @@
   "profiles": {
     "AioCore.API": {
       "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
