--- a/src/AioCore.API/appsettings.json
+++ b/src/AioCore.API/appsettings.json
@@ -7,7 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Host=localhost;Port=5432;User ID=postgres;Password=Pass@word;Database=aiocore;Pooling=true;",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;User ID=postgres;Password=Pass@word;Database=aiocore;Pooling=true;"
+  },
   "EventBus": {
     "AzureServiceBusEnabled": false,
     "Connection": "localhost",
@@ -27,5 +29,10 @@
     "AccessKey": "aioc-access",
     "SecretKey": "aioc-secret",
     "Bucket": "aioc"
-  } 
+  },
+  "Tokens": {
+    "Key": "8E5D875772347A6B19E4517ACED3C",
+    "Issuer": "7CE9E623C786FF47ED9AA32683A17"
+  },
+  "ExpiredTime": 2
 }
