--- a/src/AioCore.Infrastructure/AioCore.Infrastructure.csproj
+++ b/src/AioCore.Infrastructure/AioCore.Infrastructure.csproj
@@ -7,4 +7,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
+  </ItemGroup>
 </Project>
