add redis cache manager

--- a/src/AioCore.API/appsettings.json
+++ b/src/AioCore.API/appsettings.json
@@ -34,5 +34,6 @@
     "Key": "8E5D875772347A6B19E4517ACED3C",
     "Issuer": "7CE9E623C786FF47ED9AA32683A17"
   },
-  "ExpiredTime": 2
+  "ExpiredTime": 2,
+  "Redis": "localhost:6379,abortConnect=false"
 }
