--- a/src/AioCore.Infrastructure/AioCore.Infrastructure.csproj
+++ b/src/AioCore.Infrastructure/AioCore.Infrastructure.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Package.DatabaseManagement\Package.DatabaseManagement.csproj" />
     <ProjectReference Include="..\AioCore.Domain\AioCore.Domain.csproj" />
+    <ProjectReference Include="..\AioCore.Packages\Package.DatabaseManagement\Package.DatabaseManagement.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
