refactor eav structure

--- a/src/AioCore.API/AioCore.API.csproj
+++ b/src/AioCore.API/AioCore.API.csproj
@@ -21,4 +21,6 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
