--- a/src/AioCore.API/AioCore.API.csproj
+++ b/src/AioCore.API/AioCore.API.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AioCore.Application\AioCore.Application.csproj" />
+    <ProjectReference Include="..\AioCore.Infrastructure\AioCore.Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
