--- a/src/AioCore.Infrastructure/AioCore.Infrastructure.csproj
+++ b/src/AioCore.Infrastructure/AioCore.Infrastructure.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FastMember" Version="1.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
   </ItemGroup>
 </Project>
