--- a/src/AioCore.Shared/05.AioCore.Shared.csproj
+++ b/src/AioCore.Shared/05.AioCore.Shared.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <AssemblyName>AioCore.Shared</AssemblyName>
+    <RootNamespace>AioCore.Shared</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
