--- a/src/AioCore.API/01.AioCore.API.csproj
+++ b/src/AioCore.API/01.AioCore.API.csproj
@@ -14,9 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AioCore.Application\AioCore.Application.csproj" />
-    <ProjectReference Include="..\AioCore.Infrastructure\AioCore.Infrastructure.csproj" />
-    <ProjectReference Include="..\AioCore.Packages\Package.ViewRender\Package.ViewRender.csproj" />
+    <ProjectReference Include="..\AioCore.ActionProcessors\AioCore.ActionProcessors.csproj" />
+    <ProjectReference Include="..\AioCore.Application\02.AioCore.Application.csproj" />
+    <ProjectReference Include="..\AioCore.Infrastructure\03.AioCore.Infrastructure.csproj" />
+    <ProjectReference Include="..\AioCore.ViewRender\AioCore.ViewRender.csproj" />
     <ProjectReference Include="..\DynamicMigrations.MsSql\DynamicMigrations.MsSql.csproj" />
     <ProjectReference Include="..\DynamicMigrations.PostgresSql\DynamicMigrations.PostgresSql.csproj" />
   </ItemGroup>
@@ -25,6 +26,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <AssemblyName>AioCore.API</AssemblyName>
+    <RootNamespace>AioCore.API</RootNamespace>
   </PropertyGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
