--- a/src/AioCore.Domain/04.AioCore.Domain.csproj
+++ b/src/AioCore.Domain/04.AioCore.Domain.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <AssemblyName>AioCore.Domain</AssemblyName>
+    <RootNamespace>AioCore.Domain</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
