update dockerfile for backgroundtasks

--- a/src/AioCore.BackgroundTasks/Dockerfile
+++ b/src/AioCore.BackgroundTasks/Dockerfile
@@ -6,16 +6,10 @@ WORKDIR /app
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["src/AioCore.BackgroundTasks/AioCore.BackgroundTasks.csproj", "src/AioCore.BackgroundTasks/"]
-COPY ["src/AioCore.Shared/AioCore.Shared.csproj", "src/AioCore.Shared/"]
-COPY ["src/AioCore.Packages/Package.Localization/Package.Localization.csproj", "src/AioCore.Packages/Package.Localization/"]
-COPY ["src/AioCore.Packages/Package.Redis/Package.Redis.csproj", "src/AioCore.Packages/Package.Redis/"]
+COPY ["src/AioCore.Shared/05.AioCore.Shared.csproj", "src/AioCore.Shared/"]
 COPY ["src/AioCore.Packages/Package.Elasticsearch/Package.Elasticsearch.csproj", "src/AioCore.Packages/Package.Elasticsearch/"]
 COPY ["src/AioCore.Packages/Package.Extensions/Package.Extensions.csproj", "src/AioCore.Packages/Package.Extensions/"]
-COPY ["src/AioCore.Packages/Package.FileServer/Package.FileServer.csproj", "src/AioCore.Packages/Package.FileServer/"]
-COPY ["src/AioCore.Packages/Package.AutoMapper/Package.AutoMapper.csproj", "src/AioCore.Packages/Package.AutoMapper/"]
 COPY ["src/AioCore.Packages/Package.EventBus/Package.EventBus.csproj", "src/AioCore.Packages/Package.EventBus/"]
-COPY ["src/AioCore.Packages/Package.Mongo/Package.Mongo.csproj", "src/AioCore.Packages/Package.Mongo/"]
-COPY ["src/AioCore.Packages/Package.NestedSet/Package.NestedSet.csproj", "src/AioCore.Packages/Package.NestedSet/"]
 RUN dotnet restore "src/AioCore.BackgroundTasks/AioCore.BackgroundTasks.csproj"
 COPY . .
 WORKDIR "/src/src/AioCore.BackgroundTasks"
