--- a/src/AioCore.Application/02.AioCore.Application.csproj
+++ b/src/AioCore.Application/02.AioCore.Application.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="2.80.2" />
+    <PackageReference Include="System.Threading.AccessControl" Version="5.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
