--- a/src/AioCore.Application/AioCore.Application.csproj
+++ b/src/AioCore.Application/AioCore.Application.csproj
@@ -2,12 +2,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AioCore.Domain\AioCore.Domain.csproj" />
-    <ProjectReference Include="..\AioCore.Packages\AioCore.Mediator\AioCore.Mediator.csproj" />
+    <ProjectReference Include="..\AioCore.Packages\Package.Mediator\Package.Mediator.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.AutoMapper\Package.AutoMapper.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.DatabaseManagement\Package.DatabaseManagement.csproj" />
-    <ProjectReference Include="..\AioCore.Packages\Package.EventBus\Package.EventBus.csproj" />
     <ProjectReference Include="..\AioCore.Packages\Package.FileServer\Package.FileServer.csproj" />
-    <ProjectReference Include="..\AioCore.Packages\Package.Localization\Package.Localization.csproj" />
     <ProjectReference Include="..\AioCore.Shared\AioCore.Shared.csproj" />
   </ItemGroup>
 
