--- a/src/AioCore.Hosted/AioCore.API/AioCore.API.csproj
+++ b/src/AioCore.Hosted/AioCore.API/AioCore.API.csproj
@@ -18,7 +18,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..</DockerfileContext>
+    <DockerfileContext>..\..\..</DockerfileContext>
     <AssemblyName>AioCore.API</AssemblyName>
     <RootNamespace>AioCore.API</RootNamespace>
   </PropertyGroup>
