--- a/src/AioCore.Hosted/AioCore.Web/Properties/launchSettings.json
+++ b/src/AioCore.Hosted/AioCore.Web/Properties/launchSettings.json
@@ -2,13 +2,13 @@
   "profiles": {
     "AioCore.Web": {
       "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
       "hotReloadProfile": "blazorwasm",
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:3000",
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    }
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
+    },
   }
 }
